--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 /* CSS Document */
 
 body,td,th,p{
@@ -16,6 +16,7 @@ ul, li {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
+    -webkit-padding-start: 0;
 }
 a {
 	color: orange;
@@ -105,8 +106,7 @@ nav h1 a {
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
-  width: 100%;
-  height: 50px;
+  width: 100%; 
   background-color: #3397DB;
   align-items: center;
 }
@@ -114,7 +114,6 @@ nav h1 a {
   color: white;
   font-size: 1rem;
   font-weight: normal;
-  line-height: 1;
   margin: 0 20px;
 }
 .filter-options select {
@@ -134,18 +133,18 @@ nav h1 a {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
   text-align: center;
 }
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
-  margin: 15px;
+  margin: 15px 15px ;
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  width: calc(100% - 30px);
+  box-sizing:border-box;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -272,4 +271,25 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+
+/*========== Media Queries ==========*/
+
+@media screen and (min-width: 600px){
+
+    #restaurants-list{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    #restaurants-list li {
+       
+        width: calc(50% - 30px);
+        box-sizing:border-box;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    #restaurants-list li {
+        width: calc((100%/3) - 30px);
+    }
 }
