--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-size: 13pt;
 	color: #333;
 	line-height: 1.5;
 }
@@ -14,7 +14,7 @@ body {
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-size: 13pt;
 	color: #333;
     -webkit-padding-start: 0;
 }
@@ -43,18 +43,19 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #footer {
   background-color: #444;
   color: #aaa;
-  font-size: 8pt;
+  font-size: 10pt;
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
+  
 }
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
   height: 80px;
   background-color: #252831;
-  text-align:center;
+  text-align: center;
 }
 nav h1 {
   margin: auto;
@@ -112,7 +113,7 @@ nav h1 a {
 }
 .filter-options h2 {
   color: white;
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-weight: normal;
   margin: 0 20px;
 }
@@ -120,7 +121,7 @@ nav h1 a {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
-  font-size: 11pt;
+  font-size: 14pt;
   height: 35px;
   letter-spacing: 0;
   margin: 10px;
@@ -157,7 +158,7 @@ nav h1 a {
 #restaurants-list li h1 {
   color: #f18200;
   font-family: Arial,sans-serif;
-  font-size: 14pt;
+  font-size: 17pt;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
@@ -166,14 +167,14 @@ nav h1 a {
 }
 #restaurants-list p {
   margin: 0;
-  font-size: 11pt;
+  font-size: 14pt;
 }
 #restaurants-list li a {
   background-color: orange;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
-  font-size: 10pt;
+  font-size: 13pt;
   margin: 15px 0 0;
   padding: 8px 30px 10px;
   text-align: center;
@@ -188,6 +189,7 @@ nav h1 a {
   width: 100%;
   z-index: 1000;
 }
+
 .inside #map-container {
   background: blue none repeat scroll 0 0;
   height: 87%;
@@ -204,7 +206,8 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 100%;
+  box-sizing: border-box;
 }
 #restaurant-name {
   color: #f18200;
@@ -220,13 +223,13 @@ nav h1 a {
 	width: 90%;
 }
 #restaurant-address {
-  font-size: 12pt;
+  font-size: 15pt;
   margin: 10px 0px;
 }
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: 12pt;
+  font-size: 15pt;
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
@@ -263,7 +266,7 @@ nav h1 a {
   margin: 0 0 30px;
   overflow: hidden;
   padding: 0 20px 20px;
-  position: relative;
+  /*position: relative;*/
   width: 85%;
 }
 #reviews-list li p {
@@ -274,6 +277,40 @@ nav h1 a {
 }
 
 /*========== Media Queries ==========*/
+
+@media screen and (max-width: 1160px){
+
+    .inside header{
+        position: static;
+    }
+    
+    #breadcrumb {
+        box-sizing: border-box;
+        width: 100%;
+        
+    }
+
+    
+    .inside #map-container {
+        width: 100%;
+        height: 300px;
+        z-index: 1;
+        position: static;
+    }
+
+    #restaurant-container, #reviews-container {
+        width: 100%;
+        box-sizing: border-box;
+        padding-top: 10px;
+    }
+
+    .inside #footer{    
+        box-sizing: border-box;    
+        width: 100%;              
+    }
+
+    
+}
 
 @media screen and (min-width: 600px){
 
