--- a/css/styles.css
+++ b/css/styles.css
@@ -129,6 +129,19 @@ nav h1 a {
   width: 200px;
 }
 
+.filter-label {
+    color: white;
+    font-size: 18px;
+    margin-left: 5px;
+}
+
+.hidden 
+{position:absolute;
+left:-10000px;
+top:auto;
+width:1px;
+height:1px;
+overflow:hidden;}
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   background-color: #f3f3f3;
