feat: Add skip link that is only visible on focus, that skips over map to filter results

--- a/css/styles.css
+++ b/css/styles.css
@@ -135,13 +135,14 @@ nav h1 a {
     margin-left: 5px;
 }
 
-.hidden 
-{position:absolute;
-left:-10000px;
-top:auto;
-width:1px;
-height:1px;
-overflow:hidden;}
+.hidden {
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;}
+
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   background-color: #f3f3f3;
