--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -324,6 +324,13 @@ nav h1 a {
 
 /*========Heart icon for favoriting restaurants=========*/
 
+.favorite-button {
+    fill: none;
+    border: none;
+    background: none;
+
+}
+
 .heart {
     fill:none;
     stroke: black;
